; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_setup_early_output.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_setup_early_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i64 }
%struct.sigaction = type { i32, i32, i32 }

@early_output = common dso_local global i32 0, align 4
@SA_RESTART = common dso_local global i32 0, align 4
@SIGALRM = common dso_local global i32 0, align 4
@early_output_timer = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@ITIMER_REAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_early_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_early_output() #0 {
  %1 = alloca %struct.sigaction, align 4
  %2 = call i32 @memset(%struct.sigaction* %1, i32 0, i32 12)
  %3 = load i32, i32* @early_output, align 4
  %4 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 2
  store i32 %3, i32* %4, align 4
  %5 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 1
  %6 = call i32 @sigemptyset(i32* %5)
  %7 = load i32, i32* @SA_RESTART, align 4
  %8 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @SIGALRM, align 4
  %10 = call i32 @sigaction(i32 %9, %struct.sigaction* %1, i32* null)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @early_output_timer, i32 0, i32 0, i32 1), align 8
  store i32 100000, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @early_output_timer, i32 0, i32 0, i32 0), align 8
  %11 = load i32, i32* @ITIMER_REAL, align 4
  %12 = call i32 @setitimer(i32 %11, %struct.TYPE_5__* @early_output_timer, i32* null)
  ret void
}

declare dso_local i32 @memset(%struct.sigaction*, i32, i32) #1

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32*) #1

declare dso_local i32 @setitimer(i32, %struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
